--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 
 h1,
 h2 {
-  font-size: 2.96rem;
+  font-size: 3.15rem;
   font-weight: 700;
   color: var(--white);
 }
@@ -52,7 +52,7 @@ main {
 
 .card1,
 .card2 {
-  width: 365px;
+  width: 380px;
   background: var(--dark-blue);
   border-radius: 3rem;
 }
@@ -61,7 +61,7 @@ main {
 /* Card1 */
 
 .card1 .pad-1 {
-  padding: 2.8rem 3rem;
+  padding: 2.8rem 2.8rem;
 }
 
 .icon {
@@ -78,7 +78,7 @@ main {
 }
 
 .card1 p {
-  font-size: 14px;
+  font-size: 15px;
   margin: 1rem 0 3.6rem;
   line-height: 1.5;
 }
@@ -93,7 +93,7 @@ main {
 
 .card1 .rating-container .rating-btn {
   width: 50px;
-  font-size: 14px;
+  font-size: 15px;
   color: inherit;
   padding: 1.6rem;
   background: var(--medium-grey);
@@ -116,7 +116,7 @@ main {
   padding: 1.6rem 3rem;
   background: var(--orange);
   font-family: inherit;
-  font-size: 14px;
+  font-size: 15px;
   font-weight: 700;
   color: var(--white);
   text-transform: uppercase;
@@ -148,12 +148,12 @@ main {
 .rate {
   display: block;
   margin: 3rem auto;
-  font-size: 14px;
+  font-size: 15px;
   color: var(--orange);
   background: var(--medium-grey);
-  border-radius: 2rem;
+  border-radius: 1.7rem;
   padding: .8rem;
-  width: 175px;
+  width: 180px;
 }
 
 .card2 h2 {
@@ -161,9 +161,9 @@ main {
 }
 
 .card2 p {
-  font-size: 14px;
+  font-size: 15px;
   line-height: 1.5;
-  padding: 1.2rem 2.6rem .5rem;
+  padding: 1.2rem 2.5rem .5rem;
 }
 
 
@@ -203,8 +203,9 @@ main {
     font-size: 50%;
   }
 
-  .card1{
-    max-width: 330px;
+  .card1,
+  .card2 {
+    max-width: 340px;
     border-radius: 1.8rem;
   }
 
@@ -215,23 +216,14 @@ main {
   }
 
   .card1 p {
-    margin: 1.6rem 0 3rem;
+    margin: 1.6rem 0 2.8rem;
   }
 
   /* card2 */
-  
-  .card2 {
-    max-width: 320px;
-    border-radius: 1.8rem;
-  }
 
   .card2 .pad-2 {
     padding: 4rem 0;
 
-  }
-
-  .rate {
-    width: 165px;
   }
 
   .card2 p {
